favicon beskrivelse rettelse

--- a/webdesign.html
+++ b/webdesign.html
@@ -94,7 +94,7 @@
 
 
                 <h6>Favicon</h6>
-                <p>Jeg valgte at faviconet skulle være en maler pensel, hvor jeg valgte de samme farver fra sitet. Det vidste sig, at faviconet størrelse, er 16x16 px og derfor blev faviconet ikke tydeligt nok, med de valgte farver, jeg skulle have mere kontrakte farver, så penslen vil fremstå skarpere.
+                <p>Jeg valgte at faviconet skulle være en maler pensel, hvor jeg valgte de samme farver fra sitet. Faviconets størrelse, samt med de farver jeg havde valgt, blev iconet ikke tydeligt nok. Jeg skulle have valgt farver som var mere kontrast, så penslen vil fremstå skarpere.
                 </p>
 
             </div>
