--- a/ux.html
+++ b/ux.html
@@ -117,17 +117,19 @@ Bruger ikke samme boksnavn
 Bruger samme boksnavn som i animtaion html
 -->
 
-        <div id="linkcontainer">
+        <div id="linkcontainer7">
 
+            <div id="linkboks77">
 
-            <div id="linkboks2">
-
-                <div class="linkboks2">
+                <div class="linkboks7">
                     <a href="https://xd.adobe.com/view/1e94bd34-87c7-489b-59e8-dda83061fa3f-68a5/">04.02.01 - Design Sprint</a>
                 </div>
             </div>
 
         </div>
+
+
+
 
 
 
@@ -160,12 +162,12 @@ Bruger samme boksnavn som i animtaion html
 
             </div>
 
-            <div id="linkcontainer">
+            <div id="linkcontainer8">
 
 
-                <div id="linkboks2">
+                <div id="linkboks8">
 
-                    <div class="linkboks2">
+                    <div class="linkboks8">
                         <a href="http://www.widespace.dk/kea/04-ux/04_03_01_web_prototype/index.html">04.03.01 - Web prototype</a>
                     </div>
                 </div>
@@ -175,7 +177,7 @@ Bruger samme boksnavn som i animtaion html
 
 
 
-            <div id="ark1">
+            <div id="ark2">
 
 
                 <div class="boks7_2">
