--- a/webdesign.html
+++ b/webdesign.html
@@ -138,7 +138,7 @@
         <div id="linkboks1">
 
             <div class="linkboks1">
-                <a href="http://www.widespace.dk/kea/01-webdesign/04-responsive_webdesign/01_04_01_responsive_site_v2/index.html#splash">link til stilartsite</a>
+                <a href="http://www.widespace.dk/kea/01-webdesign/04-responsive_webdesign/01_04_01_responsive_site_v2/index.html#splash">Link til stilartsite</a>
             </div>
         </div>
 
